logo alignment fix

--- a/css/ecloud-accounts-userregistration.css
+++ b/css/ecloud-accounts-userregistration.css
@@ -20,7 +20,11 @@ html{
 .v-align main {
 	width: 50% !important;
 	margin: 0 auto;
-} 
+}
+
+.password-group #password {
+    height: 58px !important;
+}
 @media only screen and (min-width: 481px) and (max-width: 768px) {
 	.v-align main {
 		width: 100% !important;
